added product category routes
